# lifeguard

./: .env  .gitignore  .pre-commit-config.yaml  .tiltignore  AGENT.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LIFEGUARD_GAP_ANALYSIS.md  MODULARIZATION_PROPOSAL.md  OBSERVABILITY.md  PR_DESCRIPTION.md  README.md  ROADMAP.md  SECURITY_PROMPT.md  STATUS.md  TEST_COVERAGE_SUMMARY.md  Tiltfile  VISION.md  clippy.toml  docker-compose.yaml  justfile  kind-config.yaml  test_derive_nextest_tail.txt  test_errors_summary.md  test_nextest_tail.txt  tilt_logs_test_derive_nextest.txt  tilt_logs_test_nextest.txt
examples/entities/: Cargo.toml  README.md  SERVICE_MAPPING.md  account.rs  build.rs  chart_of_accounts.rs  journal_entry.rs
examples/entities/src/: lib.rs
examples/perf-idam/: .gitignore  Cargo.toml  build.rs
examples/perf-idam/migrations/: schema.sql
examples/perf-idam/src/: lib.rs
lifeguard-codegen/: COMPARISON.md  Cargo.toml  README.md  USAGE.md
lifeguard-codegen/input/: edge_case_user.rs  test_user.rs  unsigned_option_user.rs  user.rs
lifeguard-codegen/src/: entity.rs  error.rs  lib.rs  main.rs  parser.rs  writer.rs
lifeguard-codegen/tests/: test_generated_code.rs  test_writer.rs
lifeguard-codegen/tests/integration/: test_compilation.rs
lifeguard-derive/: CODEGEN_ARCHITECTURE_ANALYSIS.md  CRUD_IMPLEMENTATION_PLAN.md  Cargo.toml  DERIVE_LINKED_DISCOVERY.md  DERIVE_RELATION_USAGE.md  DESIGN_RELATION_METADATA_AND_COMPOSITE_KEYS.md  DESIGN_TRY_INTO_MODEL.md  EDGE_CASES_ATTRIBUTES.md  EDGE_CASES_COVERAGE.md  ISSUE_UUID_NAIVEDATETIME_TYPE_INFERENCE.md  MIGRATION_PREREQUISITES_DISCOVERY.md  README.md  SAVE_AS_AUTO_INCREMENT_PK.md  SEAORM_DERIVE_MAPPING.md  SEAORM_LIFEGUARD_MAPPING.md  TEST_ERRORS_AUDIT.md  build.rs
lifeguard-derive/src/: attributes.rs  lib.rs  type_conversion.rs  utils.rs
lifeguard-derive/src/macros/: column.rs  entity.rs  from_row.rs  life_model.rs  life_model_combined.rs  life_model_trait.rs  life_record.rs  linked.rs  migration_name_derive.rs  mod.rs  model.rs  partial_model.rs  primary_key.rs  relation.rs  scope_attr.rs  scope_bundle.rs  try_into_model.rs
lifeguard-derive/tests/: TEST_FAILURE_AUDIT.md  build.rs  generate_test_entities.sh  test_column_attributes.rs  test_column_attributes_parsing.rs  test_crud.rs  test_derive_linked.rs  test_derive_migration_name.rs  test_derive_partial_model.rs  test_derive_partial_model_codegen.rs  test_derive_relation.rs  test_index_validation.rs  test_life_model.rs  test_life_model_comprehensive.rs  test_life_model_comprehensive_codegen.rs  test_life_model_edge_cases.rs  test_life_model_edge_cases_codegen.rs  test_life_record.rs  test_life_record_comprehensive.rs  test_life_record_edge_cases.rs  test_minimal.rs  test_minimal_codegen.rs  test_partial_model_column_name_equals.rs  test_try_into_model.rs  test_type_safe_columns.rs  test_unsigned_option_types_codegen.rs  ui.rs
lifeguard-derive/tests/ignored/: test_life_model_comprehensive.rs  test_life_model_edge_cases.rs  test_life_record_comprehensive.rs  test_life_record_edge_cases.rs  test_minimal.rs
lifeguard-derive/tests/ui/: compile_error_composite_unique_nonexistent_column.rs  compile_error_composite_unique_nonexistent_column.stderr  compile_error_composite_unique_skipped_field.rs  compile_error_composite_unique_skipped_field.stderr  compile_error_duplicate_from_impl.rs  compile_error_duplicate_related_impl_different_columns.rs  compile_error_duplicate_related_impl_different_columns.stderr  compile_error_from_attribute.rs  compile_error_from_attribute.stderr  compile_error_has_many_attribute.rs  compile_error_has_many_attribute.stderr  compile_error_ignore_primary_key.rs  compile_error_ignore_primary_key.stderr  compile_error_index_expression_requires_coverage_columns.rs  compile_error_index_ignored_field.rs  compile_error_index_ignored_field.stderr  compile_error_index_multiple_nonexistent_columns.rs  compile_error_index_multiple_nonexistent_columns.stderr  compile_error_index_nonexistent_column.rs  compile_error_index_nonexistent_column.stderr  compile_error_index_parent_table_column.rs  compile_error_index_parent_table_column.stderr  compile_error_index_skipped_field.rs  compile_error_index_skipped_field.stderr  compile_error_linked_empty_path.rs  compile_error_linked_empty_path.stderr  compile_error_linked_invalid_entity_path.rs  compile_error_linked_invalid_entity_path.stderr  compile_error_linked_invalid_path.rs  compile_error_linked_invalid_path.stderr  compile_error_partial_model_consecutive_colons.rs  compile_error_partial_model_consecutive_colons.stderr  compile_error_partial_model_empty_entity.rs  compile_error_partial_model_empty_entity.stderr  compile_error_partial_model_invalid_identifier_colon_in_middle.rs  compile_error_partial_model_invalid_identifier_colon_in_middle.stderr  compile_error_partial_model_invalid_identifier_contains_hyphen.rs  compile_error_partial_model_invalid_identifier_contains_hyphen.stderr  compile_error_partial_model_invalid_identifier_path_segment.rs  compile_error_partial_model_invalid_identifier_path_segment.stderr  (+38 more)
lifeguard-migrate/: Cargo.toml  DESIGN_IMPROVEMENTS.md  README.md  REGISTRY_IMPLEMENTATION.md
lifeguard-migrate/examples/: build.rs.example
lifeguard-migrate/src/: build_script.rs  dependency_ordering.rs  entities.rs  entity_loader.rs  generated_migration_diff.rs  lib.rs  main.rs  migration_writer.rs  registry_loader.rs  schema_infer.rs  schema_migration_compare.rs  sql_dependency_order.rs  sql_generator.rs
lifeguard-migrate/tests/: golden_baseline.rs  infer_schema_cli_subprocess.rs  infer_schema_postgres_smoke.rs  infer_schema_table_filter_si3.rs  migration_db_compare_smoke.rs  test_build_script.rs  test_dependency_ordering.rs  test_entity_loader.rs  test_index_key_list_sql_generation.rs  test_minimal_attribute.rs  test_registry_loader.rs  test_sql_generation.rs
lifeguard-reflector/: Cargo.toml  LICENSE  README.md
lifeguard-reflector/src/: lib.rs  main.rs
tests-integration/: Cargo.toml  README.md  migration_test.rs
(+516 files in other folders)
