[package]
name = "lifeguard"
version = "0.1.0"
edition = "2021"
description = "Coroutine-native PostgreSQL ORM and data access platform for Rust's may runtime"
license = "MIT OR Apache-2.0"
repository = "https://github.com/microscaler/lifeguard"
documentation = "https://docs.rs/lifeguard"
readme = "README.md"

#[[example]]
#name = "basic"


[dependencies]
# Coroutine runtime
may = "0.3"
may_postgres = { git = "https://github.com/Xudong-Huang/may_postgres", branch = "master" }

# Procedural macros for ORM
lifeguard-derive = { path = "lifeguard-derive", version = "0.1.0" }

# Channel utilities (may be used for new pool design)
crossbeam-channel = "0.5"

# Observability (optional via features)
opentelemetry = { version = "0.29.1", features = ["testing"], optional = true }
opentelemetry-prometheus = { version = "0.14", optional = true }
prometheus = { version = "0.13", optional = true }
tracing = { version = "0.1.41", optional = true }

# Utilities
once_cell = "1"
log = "0.4"
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }

# SQL Builder (borrowed, runtime-agnostic)
sea-query = "1.0.0-rc.29"

# Development/testing utilities
may_minihttp = "0.1.11"
csv = "1"
fake = { version = "2.6", features = ["chrono", "derive"] }
rand = "0.8"

[dev-dependencies]
# Test utilities will be added as needed for may_postgres testing

[features]
default = ["metrics", "tracing"]
# Enable Prometheus metrics collection
metrics = ["dep:opentelemetry", "dep:opentelemetry-prometheus", "dep:prometheus"]
# Enable OpenTelemetry tracing
tracing = ["dep:tracing"]
mock = []

