[package]
name = "lifeguard"
version = "0.1.0"
edition = "2021"
description = "Coroutine-native PostgreSQL ORM and data access platform for Rust's may runtime"
license = "MIT OR Apache-2.0"
repository = "https://github.com/microscaler/lifeguard"
documentation = "https://docs.rs/lifeguard"
readme = "README.md"

[workspace]
members = [
    "lifeguard-derive",
    "lifeguard-codegen",
    "lifeguard-migrate",
    "lifeguard-reflector",
    "tests-integration",
]
resolver = "2"

# Pinned GraphQL stack: consumers and tests should use this version via `workspace = true`
# to match lifeguard's optional `graphql` feature (avoids duplicate async-graphql versions).
[workspace.dependencies]
# Match ORM field types used on `LifeModel` when `graphql` is enabled (`SimpleObject` needs these features).
async-graphql = { version = "7.2.1", features = ["chrono", "uuid", "decimal"] }

[[example]]
name = "query_builder"
path = "examples/query_builder_example.rs"

[[example]]
name = "test_sql_generation"
path = "examples/test_sql_generation.rs"

[[example]]
name = "find_related_scope_example"
path = "examples/find_related_scope_example.rs"


[dependencies]
# Coroutine runtime
may = "0.3"
# Pinned rev: `user_column_decode_failed` API (merge branch `user-column-decode-failed` or bump rev after rebase).
may_postgres = { git = "https://github.com/microscaler/may_postgres.git", rev = "6c92ef8b1e756741f3726fb94cc49af54f0f8596", features = ["with-chrono-0_4"] }

# Procedural macros for ORM
lifeguard-derive = { path = "lifeguard-derive", version = "0.1.0" }

# Channel utilities (may be used for new pool design)
crossbeam-channel = "0.5"

# Observability (optional via features)
opentelemetry = { version = "0.29.1", features = ["testing"], optional = true }
opentelemetry-prometheus = { version = "0.14", optional = true }
prometheus = { version = "0.13", optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["std", "registry"], optional = true }

# Utilities
once_cell = "1"
log = "0.4"
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # JSON support is always enabled (core functionality)
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }  # For entity definitions
# Enables `ToSql` for `uuid::Uuid` in `may_postgres` query parameters (insert/update/bind).
postgres-types = { version = "0.2.12", features = ["with-uuid-1", "with-serde_json-1"] }
rust_decimal = { version = "1.33", features = ["db-postgres"] }  # NUMERIC + `ToSql` for pool binds
sha2 = "0.10"  # For migration checksum calculation
regex = "1.10"  # For migration file name parsing

# SQL Builder (borrowed, runtime-agnostic)
# JSON support is always enabled (core functionality)
sea-query = { version = "1.0.0-rc.29", features = ["with-json", "with-chrono", "with-uuid", "with-rust_decimal"] }

# GraphQL API generation (version pinned in [workspace.dependencies])
async-graphql = { workspace = true, optional = true }

# Security: Force protobuf 3.7.2 to address CVE-2025-53605
# Adding as direct dependency forces all transitive dependencies to use this version
protobuf = "3.7.2"

# Development/testing utilities
may_minihttp = "0.1.11"
csv = "1"
fake = { version = "2.6", features = ["chrono", "derive"] }
rand = "0.8"
redis = "0.26"

[dev-dependencies]
ureq = { version = "2.10", default-features = false }
bytes = "1"
# Required when tests expand `LifeModel` with graphql: nested `SimpleObject` resolves `async_graphql` in this crate.
async-graphql.workspace = true
# Process exit hook so integration tests remove Docker containers (Rust may not drop `static` Lazy).
ctor = "0.2"
# Test utilities
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres", "redis"] }

[features]
default = ["metrics", "tracing"]
# Enable Prometheus metrics collection
metrics = ["dep:opentelemetry", "dep:opentelemetry-prometheus", "dep:prometheus"]
# Enable `tracing` + `tracing-subscriber` (metrics span helpers + logging `channel_layer`)
tracing = ["dep:tracing", "dep:tracing-subscriber"]
mock = []
# Enable test helpers for integration tests
test-helpers = []
graphql = ["lifeguard-derive/graphql", "dep:async-graphql"]
