[package]
name = "lifeguard-codegen"
version = "0.1.0"
edition = "2021"
description = "Code generation tool for Lifeguard ORM entities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/microscaler/lifeguard"

[lib]
name = "lifeguard_codegen"
path = "src/lib.rs"

[[bin]]
name = "lifeguard-codegen"
path = "src/main.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
yaml-rust = "0.4"
anyhow = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
tempfile = "3.0"

[features]
# This feature is only used in generated code, not in the codegen tool itself
# It's declared here to silence check-cfg warnings about cfg attributes in quote! macros
with-json = []
