[package]
name = "lifeguard-codegen"
version = "0.1.0"
edition = "2021"
description = "Code generation CLI tool for Lifeguard ORM"
license = "MIT OR Apache-2.0"
repository = "https://github.com/microscaler/lifeguard"

[[bin]]
name = "lifeguard-codegen"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }
# JSON parsing for field definitions
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
