[package]
name = "lifeguard-derive"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for Lifeguard ORM"
license = "MIT OR Apache-2.0"
repository = "https://github.com/microscaler/lifeguard"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
may_postgres = { git = "https://github.com/Xudong-Huang/may_postgres", branch = "master" }
lifeguard = { path = "..", version = "0.1.0" }
sea-query = { version = "1.0.0-rc.29", features = ["with-json"] }