[package]
name = "lifeguard-derive"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for Lifeguard ORM"
license = "MIT OR Apache-2.0"
repository = "https://github.com/microscaler/lifeguard"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
may_postgres = { git = "https://github.com/microscaler/may_postgres.git", rev = "6c92ef8b1e756741f3726fb94cc49af54f0f8596" }
lifeguard = { path = "..", version = "0.1.0", features = ["graphql"] }
# Same async-graphql as lifeguard graphql feature — required for nested `SimpleObject` expansion on `LifeModel`.
async-graphql.workspace = true
chrono = { version = "0.4.41", features = ["serde"] }
sea-query = { version = "1.0.0-rc.33", features = ["with-json", "with-chrono"] }
serde = { version = "1.0", features = ["derive"] }  # Required for Serialize/Deserialize derives in generated Models
serde_json = "1.0"  # For testing JSON fields
trybuild = "1.0"
lazy_static = "1.4"  # For shared TestCases instance to avoid race conditions

[features]
graphql = []