[package]
name = "accounting-entities"
version = "0.1.0"
edition = "2021"
description = "Accounting domain entities using Lifeguard ORM"
authors = ["Example Corp <dev@example.com>"]
license = "MIT OR Apache-2.0"

# Exclude from parent workspace (this simulates a 3rd party project)
[workspace]

[dependencies]
# Lifeguard ORM
lifeguard = { path = "../../", version = "0.1.0" }
lifeguard-derive = { path = "../../lifeguard-derive", version = "0.1.0" }

# Standard dependencies for entities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "accounting_entities"
path = "src/lib.rs"
